First main section finished globo

--- a/Globo/globo.html
+++ b/Globo/globo.html
@@ -56,5 +56,133 @@
             </div>
         </div>
     </header>    
+    <main>
+        <section class="first-column">
+            <div class="big-content">
+               <img src="pic1.jpg" alt="">
+            </div>
+            <div class="first-grid">
+                <div class="first-grid-content">
+                    <img src="pic2.jpg" alt="">
+                    <p>Leia o trecho</p>
+                    <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit..</h4>
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet consectetur.</li>
+                    </ul>
+                </div>
+                <div class="first-grid-content">
+                    <img src="grid1.jpg" alt="">
+                    <p>Especialistas explicam</p>
+                    <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit..</h4>
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet consectetur.</li>
+                    </ul>
+                </div>
+                <div class="first-grid-content">
+                    <img src="grid2.jpg" alt="">
+                    <p>Escassez na capital</p>
+                    <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit..</h4>
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet consectetur.</li>
+                    </ul>
+                </div>
+                <div class="first-grid-content">
+                    <img src="grid3.jpg" alt="">
+                    <p>Seguem na Ucrânia</p>
+                    <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit..</h4>
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet consectetur.</li>
+                    </ul>
+                </div>
+                <div class="first-grid-content">
+                    <img src="padre-2.jpg" alt="">
+                    <p>Guerra híbrda</p>
+                    <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit..</h4>
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet consectetur.</li>
+                    </ul>
+                </div>
+                <div class="first-grid-content">
+                    <img src="grid04.jpg" alt="">
+                    <p>Ucrânia e Rússia</p>
+                    <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit..</h4>
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet consectetur.</li>
+                    </ul>
+                </div>
+
+            </div>
+        </section>
+        <section class="second-column">
+            <div class="second-column-content">
+                <div>
+                    <img src="c1.jpg" alt="">
+                    <p style="color: #c4170c;">Coronavirus</p>
+                    <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, qui.</h4>
+                </div>
+                <div>
+                    <img src="c2.jpg" alt="">
+                    <p>Libertadores</p>
+                    <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, qui.</h4>
+                </div>
+                <div>
+                    <img src="c3jpeg.jpeg" alt="">
+                    <p>Copa do Brasil</p>
+                    <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, qui.</h4>
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores, earum.</li>
+                    </ul>
+                </div>
+                <div>
+                    <img src="c4.jpg" alt="">
+                    <p>Copa do Brasil</p>
+                    <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, qui.</h4>
+                </div>
+            </div>
+        </section>
+        <section class="third-column">
+            <div class="third-column-content">
+                <div>
+                    <img src="last1.jpg" alt="">
+                    <p>quem sai?</p>
+                    <h4>Elimine Arthur Aguiar , Larissa ou Linn</h4>
+                    <button>Vote agora</button>
+                    <a href="" id="color7">globoplay</a>
+                </div>
+                <div>
+                    <img src="last2.jpeg" alt="">
+                    <p>Na berlinda</p>
+                    <h4>Lorem ipsum dolor sit amet.</h4>
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet consectetur.</li>
+                        <li>Lorem, ipsum dolor sit amet consectetur adipisicing.</li>
+                    </ul>
+                </div>
+                <div>
+                    <img src="last3.jpg" alt="">
+                    <p>Na berlinda</p>
+                    <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, tenetur?</h4>
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet consectetur.</li>
+                        <li>Lorem, ipsum dolor sit amet consectetur adipisicing.</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div>
+        <a href="#">globo.com</a>
+        <nav>
+            <ul>
+                <li><a href="">Princípios editoriais</a></li>
+                <li><a href="">Política de privacidade</a></li>
+                <li><a href="">Minha conta</a></li>
+                <li><a href="">Anuncie conosco</a></li>
+            </ul>
+        </nav>
+        </div>
+        <address>© Copyright 2000-2021 Globo Comunicação e Participações S.A.</address>
+    </footer>
 </body>
 </html>
